render human readable dates & icons, resolve issue with tests and prop validation differing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,3 @@
-.App {
-  text-align: center;
+.weather-app {
+  margin: 0 20px;
 }
